# FasterTNN

./: Makefile  README.md
fastertnn/: CMakeLists.txt
fastertnn/cuda/: ptx.cuh  sm75_tab_gemm.cuh  sm80_bnn_gemm.cuh  sm80_btn_gemm.cuh  sm80_tbn_gemm.cuh  sm80_tnn_gemm.cuh  tab_quan.cuh  utils.cuh
fastertnn/include/: conv_utils.cuh  tab_conv.h
fastertnn/include/shapes/: shape_layers.h  shape_models.h
fastertnn/lib/: conv_utils.cu  tab_conv.cu
fastertnn/results/: ternary_mm.txt
fastertnn/src/: bnn.cu  btn.cu  conv.cu  model.cu  quan.cu  tbn.cu  tnn.cu
include/: utils.h
include/timing/: shapes_layers.h  shapes_test.h
include/tnns/: binarize2row.h  common.h  data.h  mm.h  ternarize2row.h  tnns_cpu.h
src/: timing_gemm.c  timing_layers.c  utils.c
src/tnns/: binarize2row_arm_neon.c  binarize2row_avx2.c  data.c  mm_p2_final_bnn_arm_neon.c  mm_p2_final_bnn_avx2.c  mm_p2_final_btn_arm_neon.c  mm_p2_final_btn_avx2.c  mm_p2_final_tbn_arm_neon.c  mm_p2_final_tbn_avx2.c  mm_p2_final_tnn_arm_neon.c  mm_p2_final_tnn_avx2.c  ternarize2row_arm_neon.c  ternarize2row_avx2.c  tnns_cpu_mm_p0.c  tnns_cpu_mm_p1.c  tnns_cpu_mm_p2.c  tnns_cpu_naive.c
src/tnns/gemm-variants/: mm_v1_p0_naive.c  mm_v2_p0_blocked.c  mm_v3_p0_popcnt.c  mm_v4_p0_lib_2pc.c  mm_v5_p1_lib_2pc.c  mm_v6_p1_lib_1pc.c  mm_v7_p1_lib_csas.c  mm_v8_p2_lib_csas.c
